--- a/style.css
+++ b/style.css
@@ -901,7 +901,7 @@ input[type="number"]::-webkit-inner-spin-button {
 /* Modal styles */
 .modal {
   
-  display: flex;
+  display: none;
   flex-direction: column;
   /* flex-wrap: nowrap; */
   justify-content: center;
