Change in style of home page

--- a/style.css
+++ b/style.css
@@ -11,6 +11,17 @@
   font-family: "Playfair Display", serif;
 }
 
+.home .slider .home-content{
+  color: white;
+  background-color:rgba(5, 51, 20,0.2);
+  backface-visibility: hidden;
+}
+
+.slide_viewer .slide_group .slide{
+  filter: blur(5px);
+  
+}
+
 /* Customizing the title */
 .swal-title {
   color: #000000 !important; /* Change title color */
