--- a/style.css
+++ b/style.css
@@ -1612,6 +1612,12 @@ ul {
   margin-top: 100px;
 }
 
+@media screen and (max-width: 768px) {
+    .header-section{
+      padding: 100px 20px;
+    }
+}
+
 .header-section h1 {
   font-size: 5.5rem;
   margin-bottom: 10px;
