--- a/style.css
+++ b/style.css
@@ -903,6 +903,119 @@ input[type="number"]::-webkit-inner-spin-button {
   box-shadow: 0 4px 6px rgba(183, 253, 6, 0.1); 
 }
 
+.agri-learn-faq-button-container{
+  margin: 8px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+.agri-learn-faq-button{
+background-color: rgb(0, 255, 55);
+color:#ffffff;
+border-radius: 5px;
+height:26px;
+width:100px;
+border-width: 0px;
+font-family: sans-serif;
+}
+
+.agri-learn-faq-top-section{
+  background-color: #ffffff;
+  height:40vh;
+  display:flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.agri-learn-faq-top-section-image{
+  height:200px;
+  width:300px;
+}
+
+.agri-learn-faq-section-heading{
+  color:black;
+  font-size: 24px;
+  font-family: sans-serif;
+}
+
+.agri-learn-faq-section-para{
+  color:black;
+  font-size: 14px;
+  font-family: sans-serif;
+}
+
+.agri-learn-faq-icon-image{
+  fill:#ffffff;
+  width: 34px;
+  height: 34px;
+}
+.agri-learn-faq-section{
+  min-height:80vh;
+  width:100%;
+  margin:0 auto;
+  display:flex;
+  flex-direction: column;
+  align-items:center;
+}
+
+.agri-learn-faq-title{
+  font-size:30px;
+  margin:5px;
+  margin-bottom:14px;
+  font-family:'Montserrat', sans-serif;
+  font-weight: bold;
+}
+
+.agri-learn-faq-heading{
+  font-size:26px;
+  font-family:sans-serif;
+}
+
+.agri-learn-faq-para{
+  margin-top:5px;
+  font-size:18px;
+  font-family:"Roboto";
+}
+
+.agri-learn-faq{
+  width:90%;
+  max-width: 80%;
+  margin-top:2 rem;
+  margin-bottom: 10px;
+padding-bottom:1 rem;
+border-bottom:2px solid #ffffff;
+cursor:pointer;
+}
+
+.agri-learn-faq-question{
+  display:flex;
+  justify-content: space-between;
+  align-items:flex-start;
+  margin-top: 5px;
+  width:100%;
+}
+
+.agri-learn-faq-answer{
+  margin-top: 0px;
+  margin-bottom: 8px;
+  max-height: 0;
+  overflow: hidden;
+  width:100%;
+}
+
+.agri-learn-faq.agri-learn-faq-active .agri-learn-faq-answer{
+max-height: 300px;
+}
+
+.agri-learn-faq.agri-learn-faq-active .agri-learn-faq-icon-image{
+transform:rotate(180deg);
+
+}
+.agri-learn-faq-svg{
+  transition: transform 0.5s ease-in;
+}
 
 /* Modal styles */
 .modal {
@@ -1478,6 +1591,21 @@ background-color: #a48613;
 #backtoTop a i {
 font-size: 36px;
   color: white;
+}
+#faq{
+  position :fixed;
+  bottom: 90px;
+  right: 24px;
+  height: 60px;
+  width: 60px;
+  background-color: #B19222;
+  border-radius:50%;
+  margin-bottom: 10px;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  display: none; 
+  transition: background-color 0.5s ease-in 0.3s;
 }
 .footer-iconTop a{
   display: inline-block;
